; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libmp/tests/extr_legacy_test.c_testmcmp.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libmp/tests/extr_legacy_test.c_testmcmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"ok %d - %s\0A\00", align 1
@tnr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"not ok - %d %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*)* @testmcmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @testmcmp(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i64 @mp_mcmp(i32* %7, i32* %8)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32, i32* @tnr, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @tnr, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %13, i8* %14)
  br label %21

16:                                               ; preds = %3
  %17 = load i32, i32* @tnr, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* @tnr, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %18, i8* %19)
  br label %21

21:                                               ; preds = %16, %11
  ret void
}

declare dso_local i64 @mp_mcmp(i32*, i32*) #1

declare dso_local i32 @printf(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
